<resources>
    <string name="app_name">狂享</string>
    <string name="my_message_title">我的消息</string>
    <string name="user_center">用户中心</string>
    <string name="my_setting_title">用户中心</string>
    <string name="my_borrow_title">我的租借</string>
    <string name="borrow">租借</string>
    <string name="settings_title">设置</string>
    <string name="action_settings">设置</string>
    <string name="input_qrcode">输入储物柜编号</string>
    <string name="confirm_unlock">确认</string>
    <string name="scan_qrcode">扫描二维码</string>
    <string name="input_qrcode_unlock">输入编号开锁</string>
    <string name="input_correct_boxid">请确认您输入了正确的编码</string>
    <string name="scan_qrcode_unlock">扫码开锁</string>
    <string name="get_default_verify_code">验证码功能暂未实现，输入170527</string>
    <string name="login_disclaimer_title">去注册</string>
    <string name="register_disclaimer_title">《服务条款》</string>
    <string name="title_activity_login">登录</string>
    <string name="title_activity_box_detail">详情</string>
    <string name="activity_order_order_id">订单号:%1$s</string>
    <string name="activity_order_order_state">订单状态:%1$s</string>
    <string name="activity_order_order_goods">物品:%1$s</string>
    <string name="activity_order_order_start_time">开始时间:%1$s</string>
    <string name="activity_order_order_end_time">结束时间:%1$s</string>
    <string name="activity_order_total">订单共计:%1$d条</string>
    <string name="activity_order_distance">使用距离:%1$f</string>
    <string name="activity_order_cost">费用共计:%1$f</string>
    <string name="activity_order_borrow_from">从租借:%1$s</string>
    <string name="activity_order_return_to">归还到:%1$s</string>
    <string name="cancel_order">取消订单</string>
    <string name="pay_order">支付订单</string>
    <string name="cancel">取消</string>
    <string name="title_activity_order_detail">订单详情</string>
    <string name="logout">退出登录</string>
    <string name="register">注册</string>
    <string name="register_disclaimer_text">无账号?    </string>
    <string name="login_disclaimer_text">点击-确定，即表示已阅读并同意</string>
    <string name="goods_detail">物品详情</string>
    <string name="return_goods_test">模拟还物</string>
    <string name="Invite_friend_together">呼朋唤友一起骑行</string>
    <string name="No.bike">单车编号</string>
    <string name="No.bike.format">单车编号: %s</string>
    <string name="about_bike">关于单车</string>
    <string name="about_credit">摩拜信用分</string>
    <string name="about_mobike">关于摩拜</string>
    <string name="about_us">关于我们</string>
    <string name="action.detail">明细</string>
    <string name="action_helps">使用帮助</string>
    <string name="action_need_help">需要帮助?</string>
    <string name="action_sign_in">确定</string>
    <string name="action_sign_in_short">登录</string>
    <string name="add_bike_dialog_content">感谢您反馈当前位置无摩拜单车可用的问题，您的建议对于我们近期正在进行的增加运营区域的计划尤为重要。我们会尽快将运营地点覆盖到您建议的区域，请在微信中搜索并关注《摩拜单车》并留言</string>
    <string name="add_credit_message">信用值会增加哦！</string>
    <string name="alert">提示</string>
    <string name="ali_pay">支付宝</string>
    <string name="all_bike">全部单车</string>
    <string name="all_bike_types">全部单车</string>
    <string name="all_images">全部图片</string>
    <string name="already_submit">已提交</string>
    <string name="app_not_install">未安装该应用</string>
    <string name="appeal_negative_record_edittext_hint">申诉原因</string>
    <string name="appeal_negative_record_edittext_title">请填写申诉原因:</string>
    <string name="appeal_negative_record_photo_hint">提供照片可以提高申诉成功率</string>
    <string name="appeal_negative_record_submit_success_message">负面记录申诉已提交,请等待申诉结果。如申诉生效, 将删除负面记录,并恢复所扣信用分。</string>
    <string name="appeal_negative_record_title">负面记录申诉</string>
    <string name="assist_bike_location_infowindow_text">找不到车可以到这试试</string>
    <string name="assist_bike_location_text">如果您找不到单车，可以点击这里查看单车可能位置，该位置仅供参考，请优先以单车位置为准。</string>
    <string name="avatar">头像</string>
    <string name="back_exit_hint">再按一次退出摩拜单车</string>
    <string name="balance_amount_greater_than_six">999999+</string>
    <string name="balance_unit">￥%.2f</string>
    <string name="beep_button_click">正在响铃</string>
    <string name="beep_button_text">寻车铃</string>
    <string name="beep_fail">呼叫失败</string>
    <string name="beep_success">呼叫成功</string>
    <string name="beep_too_frequent">呼叫太频繁，休息一下</string>
    <string name="bike">辆</string>
    <string name="bike.askfor">申请增加车辆</string>
    <string name="bike.had.found">该谢谢您的热心帮助，这辆车已经被找到了</string>
    <string name="bike.near">您已到达预约车辆附近</string>
    <string name="bike_code_error">自行车编号有误，请确认</string>
    <string name="bike_data_error">自行车信息错误，请重试</string>
    <string name="bike_failure">发现车辆故障</string>
    <string name="bike_id">自行车编号：</string>
    <string name="bike_info_count_title">可用</string>
    <string name="bike_info_distance_title">距离起始位置</string>
    <string name="bike_info_fees_interval">每%d分钟</string>
    <string name="bike_info_walk_time_title">步行可到达</string>
    <string name="bike_low_battery">自行车电量低，不可使用</string>
    <string name="bike_occupied">自行车被占用，不可使用</string>
    <string name="bike_out_of_range">自行车不在可用范围，请重新选择自行车</string>
    <string name="bike_red_packet">红包车</string>
    <string name="bike_subscribe_overdue">我都等了好久，你怎么还没来呀。</string>
    <string name="bike_type_bar_showcase_content">不同类型单车间仅计价方式不同，使用方式完全一致，快来体验吧！</string>
    <string name="bike_type_bar_showcase_title">点这里切换车型</string>
    <string name="bike_upgrading">自行车升级中，不可使用</string>
    <string name="bike_useraccount_overdue">账户已过期,请重新登录哟</string>
    <string name="bikestop.askfor">申请增加停车点</string>
    <string name="booking_cancel_message">每天可预约5次，确认要取消吗？</string>
    <string name="booking_confirm_message">预约后将为您保留15分钟，请尽快前往完成开锁。</string>
    <string name="booking_countdown_title">预约保留时间</string>
    <string name="booking_deadline_notification_text">预约保留只剩最后1分钟，请尽快前往完成开锁。</string>
    <string name="booking_deadline_notification_title">预约提醒</string>
    <string name="booking_login_text">立即登录即可骑单车</string>
    <string name="booking_pending_register_text">完成注册即可骑单车</string>
    <string name="booking_request_fail_text">抱歉，暂时没有可预约车辆</string>
    <string name="booking_request_text">预约申请中…</string>
    <string name="booking_text">预约用车</string>
    <string name="booking_timeout_notification_text">您的预约超过了15分钟限制，已经取消。</string>
    <string name="booking_timeout_notification_title">预约超时提醒</string>
    <string name="calories">大卡</string>
    <string name="calories_burned">运动燃烧</string>
    <string name="camera_permission_hint_text_1">摄像头权限可能未打开</string>
    <string name="campus_service_unavailable">校方服务不稳定，请稍后再试</string>
    <string name="cancel_booking">预约已取消</string>
    <string name="cancel_booking_fail">取消预约失败，请稍后再试</string>
    <string name="cancel_booking_title">取消预约</string>
    <string name="cancel_refund">不退了</string>
    <string name="cancel_share">分享取消</string>
    <string name="capture_photo">拍摄照片</string>
    <string name="capture_photo_description">拍摄故障车照片</string>
    <string name="capture_photo_done">照片拍摄成功</string>
    <string name="change_mobile_number">更换手机号</string>
    <string name="change_mobile_number_first_step">原手机号退押金（2-7个工作日到账）</string>
    <string name="change_mobile_number_hint">三个月内只允许更换一次手机号</string>
    <string name="change_mobile_number_no_username">当前手机号无个人信息绑定所以无需更换,使用新手机号注册登录即可。</string>
    <string name="change_mobile_number_second_step">更换手机号，登录重新交押金</string>
    <string name="change_mobile_number_success">更换成功!请使用新手机号登录</string>
    <string name="change_mobile_number_text">授权摩拜单车更换手机号</string>
    <string name="change_mobile_number_third_step">车费余额，行程等信息不变</string>
    <string name="check_red_packet_balance">查看我的红包余额</string>
    <string name="check_version_update">检查新版本</string>
    <string name="chose">选择图片</string>
    <string name="close">关闭</string>
    <string name="commonly_address">常用地址</string>
    <string name="community_title">摩拜单车社区</string>
    <string name="complete">完成</string>
    <string name="confirm">确认</string>
    <string name="confirm_logout_message">确定退出登录吗？</string>
    <string name="confirm_report_lock_issue">确认申报</string>
    <string name="contact_us">联系我们</string>
    <string name="cost.default">0元</string>
    <string name="coupon_count">张</string>
    <string name="credit_card_add_error">无效信用卡</string>
    <string name="credit_card_add_save">保存</string>
    <string name="credit_card_add_saving">保存信用卡</string>
    <string name="credit_card_add_toolbar_title">添加信用卡</string>
    <string name="credit_card_select_add">添加信用卡</string>
    <string name="credit_card_select_delete">删除</string>
    <string name="credit_card_select_delete_cancel">取消</string>
    <string name="credit_card_select_delete_confirmation">确定删除此卡？</string>
    <string name="credit_card_select_delete_loading">正在删除信用卡</string>
    <string name="credit_card_select_delete_ok">删除</string>
    <string name="credit_card_select_deposit">付押金</string>
    <string name="credit_card_select_loading">正在获取信用卡信息</string>
    <string name="credit_card_select_title">信用卡</string>
    <string name="credit_card_select_topup">充值</string>
    <string name="credit_debit_card">信用卡／借记卡</string>
    <string name="credit_value">信用积分 %d</string>
    <string name="current.network">当前网络为2g</string>
    <string name="current_mobile_number">您当前的手机号为 %s</string>
    <string name="current_trip">当前行程</string>
    <string name="customer_service">客户服务</string>
    <string name="data.clear">清空历史记录</string>
    <string name="deep_link_error">链接无法跳转</string>
    <string name="default_id_info_reject_text">认证失败，请重新提交照片</string>
    <string name="deny.avatar.hint">更换头像，需要获取您的图片存储，请在应用权限中赋予读写手机存储权限。</string>
    <string name="deny.report.hint">提交图片，需要获取您的图片存储，请在应用权限中赋予读写手机存储权限。</string>
    <string name="deposit.riding.refund">骑行中不能退押金</string>
    <string name="deposit_amount_value">299</string>
    <string name="deposit_and_fee">车费与押金</string>
    <string name="deposit_instruction">押金说明</string>
    <string name="deposit_question">押金问题</string>
    <string name="deposit_refund_issue_submit_success_message">对于此次不顺畅的退款经历, 我们很抱歉。我们会在一个工作日内通过短信或电话联系您,追踪押金不到账的原因。摩拜单车不会扣留押金,查清原因后押金会原路退回,请不必担心。</string>
    <string name="deposit_reservation_refund">预约中不能退押金</string>
    <string name="deposit_user_lock_refund">账户冻结中不能退押金</string>
    <string name="deposit_withdraw_issue_get_orderid_hint">订单号查询办法</string>
    <string name="deposit_withdraw_issue_orderid_text">支付订单号</string>
    <string name="deposit_withdraw_issue_step_1">1. 选择支付渠道:</string>
    <string name="deposit_withdraw_issue_step_2">2. 请上传您的支付订单页截屏，确保订单号清晰可见:</string>
    <string name="deposit_withdraw_issue_step_3">3. 填写支付订单号:</string>
    <string name="deposit_withdraw_issue_title">押金退款已超过7个工作日还未到账</string>
    <string name="desc_problem">请描述您的问题</string>
    <string name="details_hint">查看</string>
    <string name="dialog_isunlock_message">请您检查车辆是否已开锁</string>
    <string name="dialog_isunlock_title">是否已开锁</string>
    <string name="dialog_market_title">"喜欢摩拜单车独一无二的骑行体验？
去应用商店给个好评吧"</string>
    <string name="dialog_red_packet_amount">查看金额</string>
    <string name="dialog_red_packet_msg">你获得一个摩拜现金红包</string>
    <string name="dialog_unlock_help_message">当您到达目的地之后请手动关锁，即可完成还车计费。</string>
    <string name="dialog_unlock_help_title">如何还车</string>
    <string name="doing_login">登录中…</string>
    <string name="easter_bike_default_award">神秘大奖</string>
    <string name="easter_bike_ride_hint">骑行该彩蛋车%1$d小时内免费，有效骑行超过%2$d分钟就有机会抽取</string>
    <string name="easter_bike_unlogin_hint">此车为彩蛋车，骑行结束后有机会领取神秘大奖！</string>
    <string name="easter_egg">摩拜彩蛋</string>
    <string name="easter_egg_bike">彩蛋车</string>
    <string name="get_verify_code">获取验证码</string>
    <string name="prompt_input_mobile_number">请输入手机号</string>
    <string name="prompt_input_verify_code">请输入验证码</string>
    <string name="prompt_mobile_number">手机号</string>
    <string name="prompt_verify_code">验证码</string>
    <string name="userinfo_distance_total">累计骑行(公里)</string>
    <string name="userinfo_power_total">运动成就(大卡)</string>
    <string name="userinfo_reduce_carbon_emission">节约碳排放(千克)</string>
</resources>