<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:app="http://schemas.android.com/apk/res-auto"
                android:id="@id/linear_rootview"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:background="?colorPrimary"
                android:fitsSystemWindows="true"
                android:orientation="vertical">

    <android.support.v7.widget.Toolbar
        android:id="@+id/activity_login_toolbar"
        android:layout_width="match_parent"
        android:layout_height="?actionBarSize"
        android:background="@color/user_info_color"
        app:popupTheme="@style/Theme.MyTheme.PopupOverlay">

        <TextView
            android:id="@+id/activity_login_toolbar_title_text"
            style="@style/TextAppearance.AppCompat.Widget.ActionBar.Title.Inverse"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:textColor="@android:color/white"/>
    </android.support.v7.widget.Toolbar>

    <RelativeLayout
        android:id="@id/login_form_container"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_below="@id/activity_login_toolbar"
        android:background="@android:color/white"
        android:fillViewport="true"
        android:scrollbars="none">

        <LinearLayout
            android:id="@id/mobile_login_form"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:orientation="vertical">
            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="@dimen/activity_login_item_height"
                android:layout_marginLeft="@dimen/activity_horizontal_margin"
                android:layout_marginRight="@dimen/activity_horizontal_margin"
                android:layout_marginTop="20.0dip"
                android:background="@color/edit_text_background"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <TextView
                    android:id="@id/mobile_hint"
                    android:layout_width="@dimen/activity_login_item_title_width"
                    android:layout_height="wrap_content"
                    android:paddingLeft="@dimen/activity_horizontal_margin"
                    android:text="@string/prompt_mobile_number"
                    android:textColor="@android:color/black"
                    android:textSize="13.0sp"
                    android:visibility="visible"/>

                <com.tian.sharebox.ui.ClearEditText
                    android:id="@id/mobile_number"
                    android:layout_width="0.0dip"
                    android:layout_height="fill_parent"
                    android:layout_weight="1.0"
                    android:background="@android:color/transparent"
                    android:drawableRight="@drawable/clear_text"
                    android:hint="@string/prompt_input_mobile_number"
                    android:inputType="number"
                    android:maxLines="1"
                    android:padding="8.0dip"
                    android:singleLine="true"
                    android:textColor="@color/main_text_color"
                    android:textCursorDrawable="@null"
                    android:textSize="13.0sp"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="@dimen/activity_login_item_height"
                android:layout_marginBottom="@dimen/activity_vertical_margin"
                android:layout_marginLeft="@dimen/activity_horizontal_margin"
                android:layout_marginRight="@dimen/activity_horizontal_margin"
                android:layout_marginTop="@dimen/activity_login_vertical_margin"
                android:background="@color/edit_text_background"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="@dimen/activity_login_item_title_width"
                    android:layout_height="wrap_content"
                    android:paddingLeft="@dimen/activity_horizontal_margin"
                    android:text="@string/prompt_verify_code"
                    android:textColor="@android:color/black"
                    android:textSize="13.0sp"/>

                <EditText
                    android:id="@+id/verify_code"
                    android:layout_width="0.0dip"
                    android:layout_height="fill_parent"
                    android:layout_weight="1.0"
                    android:background="@android:color/transparent"
                    android:hint="@string/prompt_input_verify_code"
                    android:imeActionLabel="@string/action_sign_in_short"
                    android:imeOptions="normal|actionUnspecified"
                    android:inputType="numberDecimal"
                    android:maxLines="1"
                    android:padding="8.0dip"
                    android:singleLine="true"
                    android:textColor="@color/main_text_color"
                    android:textCursorDrawable="@null"
                    android:textSize="13.0sp"/>

                <Button
                    android:id="@id/get_verify_code_btn"
                    style="@style/My.Button"
                    android:layout_width="115.0dip"
                    android:layout_height="fill_parent"
                    android:background="@drawable/square_button_style"
                    android:text="@string/get_verify_code"
                    android:textColor="@android:color/white"
                    android:textSize="14.0sp"
                    android:enabled="false"/>
            </LinearLayout>

            <TextView
                android:id="@+id/get_voice_verify_code"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20.0dip"
                android:text="@string/get_default_verify_code"
                android:textColor="@color/main_app_color"
                android:textSize="12.0sp"
                android:visibility="invisible"/>

            <Button
                android:id="@id/sign_in_button"
                style="@style/My.Button"
                android:layout_width="fill_parent"
                android:layout_height="45.0dip"
                android:layout_gravity="center_horizontal"
                android:layout_marginLeft="@dimen/activity_horizontal_margin"
                android:layout_marginRight="@dimen/activity_horizontal_margin"
                android:layout_marginTop="30.0dip"
                android:background="@drawable/square_button_style"
                android:enabled="false"
                android:text="@string/action_sign_in"
                android:textColor="@android:color/white"
                android:textSize="14.0sp"
                android:textStyle="bold"/>

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8.0dip"
                android:layout_marginTop="8.0dip"
                android:gravity="center"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/login_disclaimer_text"
                    android:textSize="12.0sp"/>

                <TextView
                    android:id="@+id/disclaimer_title_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/disclaimer_title"
                    android:textColor="@color/light_red_color"
                    android:textSize="12.0sp"/>
            </LinearLayout>

            
        </LinearLayout>
    </RelativeLayout>

    <include
        layout="@layout/loading_toast"
        android:id="@+id/activity_login_loading"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"/>
</RelativeLayout>